# VTAssignment1

./: README.md
a1_eraser/: .gitignore  AdvancedEraser.cpp  AdvancedEraser.h  CMakeLists.txt  Dockerfile  Eraser.cpp  Eraser.h  EraserInfo.cpp  EraserInfo.h  EraserLock.cpp  EraserLock.h  EraserObject.h  EraserObject.tpp  Logger.cpp  Logger.h  Readme.md  SimpleEraser.cpp  SimpleEraser.h  types.h  utils.cpp  utils.h
a1_eraser/cmake/: FindCheck.cmake  FindDWARF.cmake  Findlibunwind.cmake  configure_files.cmake
a1_eraser/inst/: CMakeLists.txt  cemila.cpp  cemila.py
a1_eraser/inst/tests/: my_instr_test.cpp  prot_access.cpp  unprot_access.cpp
a1_eraser/inst/tests/test_re/: unprot_access.txt
a1_eraser/tests/: CMakeLists.txt  basic.cpp  mytest.cpp  util.cpp  util.h
a1_eraser/tests/test_basic_a/: uninit_access.txt  unprot_access.txt
a1_eraser/tests/test_basic_s/: uninit_access.txt  unprot_access.txt
